[gd_scene load_steps=29 format=3 uid="uid://dc6twae4gpv87"]

[ext_resource type="Script" path="res://Game Components/UI_Elements/combat/combatScreen.gd" id="1_mxv4w"]
[ext_resource type="PackedScene" uid="uid://dch063dhlbkj5" path="res://scenes/groundFlies.tscn" id="2_cjm7y"]
[ext_resource type="PackedScene" uid="uid://c5v3gl8bbth1g" path="res://scenes/enemy.tscn" id="3_6j6h7"]
[ext_resource type="Theme" uid="uid://c1pntnyw8t772" path="res://themes/hp_bar.tres" id="4_2r65i"]
[ext_resource type="Texture2D" uid="uid://dv7hntw3bi4xl" path="res://Sprites/Artem/artem_v1_back_walking.png" id="4_43trn"]
[ext_resource type="Texture2D" uid="uid://dv34tx3iqtg2a" path="res://Game Components/UI_Elements/character screen/base_book.png" id="4_uo8iy"]
[ext_resource type="LabelSettings" uid="uid://b8gkxf5wk0pdu" path="res://scenes/character_info.tres" id="5_be3fw"]
[ext_resource type="FontFile" uid="uid://du58gfnyy5wpj" path="res://Game Components/fonts/Silver.ttf" id="6_p1cl7"]
[ext_resource type="PackedScene" uid="uid://2of3o36sd6rq" path="res://Game Components/Inventory/inventory_GUI.tscn" id="7_6qudd"]
[ext_resource type="PackedScene" uid="uid://dpv6cisbc7uye" path="res://Game Components/UI_Elements/combat/spell_button.tscn" id="8_16ejo"]
[ext_resource type="LabelSettings" uid="uid://rpr4y5q5ktko" path="res://char_info.tres" id="12_jwlj2"]
[ext_resource type="LabelSettings" uid="uid://dlqqfhw358iwk" path="res://title.tres" id="12_vu285"]
[ext_resource type="SpriteFrames" uid="uid://ftaerve5ta27" path="res://Game Components/UI_Elements/combat/spell_animations.tres" id="14_cb2l5"]
[ext_resource type="SpriteFrames" uid="uid://b4mvq8yx2t3yi" path="res://Game Components/UI_Elements/combat/Dot Effects.tres" id="14_w4egx"]
[ext_resource type="Script" path="res://scripts/Pet.gd" id="18_dsuyw"]
[ext_resource type="Texture2D" uid="uid://bcranc40bjctv" path="res://Sprites/combat/spell icons/Blood Moon - talent.png" id="19_v8xaj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ife6u"]
atlas = ExtResource("4_43trn")
region = Rect2(0, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0v5k2"]
atlas = ExtResource("4_43trn")
region = Rect2(32, 0, 32, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_htvib"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ife6u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0v5k2")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}]

[sub_resource type="Gradient" id="Gradient_bm1tl"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_1r4qu"]
gradient = SubResource("Gradient_bm1tl")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.876068, 0.149573)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_qtvrs"]
color = Color(0.113725, 0.133333, 0.160784, 1)
thickness = 8
vertical = true

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i85tx"]

[sub_resource type="Animation" id="Animation_txicx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("spell effect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(693.913, 456.094)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("enemy attack:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1421, 366)]
}

[sub_resource type="Animation" id="Animation_4yych"]
resource_name = "enemy cast"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("enemy attack:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1421, 366), Vector2(506, 487)]
}

[sub_resource type="Animation" id="Animation_cqn8w"]
resource_name = "spell cast"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("spell effect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(693.913, 456.094), Vector2(1559, 389)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6s30w"]
_data = {
"RESET": SubResource("Animation_txicx"),
"enemy cast": SubResource("Animation_4yych"),
"spell cast": SubResource("Animation_cqn8w")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_mg0qq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_v8xaj")
}],
"loop": true,
"name": &"Blood Moon",
"speed": 5.0
}]

[node name="combatScreen" type="Node2D"]
script = ExtResource("1_mxv4w")

[node name="Node2D" parent="." instance=ExtResource("2_cjm7y")]
z_index = -1
position = Vector2(886, 511)
scale = Vector2(2.25, 2.25)

[node name="Node2D2" parent="." instance=ExtResource("2_cjm7y")]
z_index = -1
position = Vector2(3241, 509)
scale = Vector2(2.25, 2.25)

[node name="Node2D3" parent="." instance=ExtResource("2_cjm7y")]
z_index = -1
position = Vector2(3219, -634)
scale = Vector2(2.25, 2.25)

[node name="Node2D4" parent="." instance=ExtResource("2_cjm7y")]
z_index = -1
position = Vector2(864, -643)
scale = Vector2(2.25, 2.25)

[node name="Node2D5" parent="." instance=ExtResource("2_cjm7y")]
z_index = -1
position = Vector2(-1461, -639)
scale = Vector2(2.25, 2.25)

[node name="Node2D7" parent="." instance=ExtResource("2_cjm7y")]
visible = false
z_index = -1
position = Vector2(-1375, -1752)
scale = Vector2(2.25, 2.25)

[node name="Node2D10" parent="." instance=ExtResource("2_cjm7y")]
z_index = -1
position = Vector2(-1286, 1670)
scale = Vector2(2.25, 2.25)

[node name="Node2D11" parent="." instance=ExtResource("2_cjm7y")]
z_index = -1
position = Vector2(905, 1645)
scale = Vector2(2.25, 2.25)

[node name="Node2D12" parent="." instance=ExtResource("2_cjm7y")]
z_index = -1
position = Vector2(3178, 1664)
scale = Vector2(2.25, 2.25)

[node name="Node2D8" parent="." instance=ExtResource("2_cjm7y")]
visible = false
z_index = -1
position = Vector2(974, -1714)
scale = Vector2(2.25, 2.25)

[node name="Node2D9" parent="." instance=ExtResource("2_cjm7y")]
visible = false
z_index = -1
position = Vector2(3216, -1721)
scale = Vector2(2.25, 2.25)

[node name="Node2D6" parent="." instance=ExtResource("2_cjm7y")]
z_index = -1
position = Vector2(-1470, 506)
scale = Vector2(2.25, 2.25)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(961, 539)

[node name="player" type="AnimatedSprite2D" parent="."]
light_mask = 0
position = Vector2(504, 536)
scale = Vector2(11.4375, 11.4375)
sprite_frames = SubResource("SpriteFrames_htvib")
animation = &"idle"

[node name="PointLight2D" type="PointLight2D" parent="."]
visibility_layer = 0
position = Vector2(549, 569)
scale = Vector2(18.5156, 17.5078)
texture = SubResource("GradientTexture2D_1r4qu")

[node name="combatUI" type="Control" parent="."]
light_mask = 0
z_index = 1
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Sprite2D" type="Sprite2D" parent="combatUI"]
light_mask = 0
position = Vector2(960, 1267)
scale = Vector2(2.84609, 2.84609)
texture = ExtResource("4_uo8iy")

[node name="Inventory" type="Button" parent="combatUI"]
visible = false
light_mask = 0
layout_mode = 0
offset_left = 972.0
offset_top = 751.0
offset_right = 1227.0
offset_bottom = 819.0
text = "inventory"

[node name="return" type="Button" parent="combatUI"]
visible = false
layout_mode = 0
offset_left = 944.702
offset_top = 949.193
offset_right = 1199.7
offset_bottom = 1017.19
text = "exit"

[node name="combat" type="Node2D" parent="combatUI"]
light_mask = 0

[node name="chosen_spell_label" type="Label" parent="combatUI/combat"]
offset_left = 427.0
offset_top = 722.0
offset_right = 531.0
offset_bottom = 814.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_p1cl7")
theme_override_font_sizes/font_size = 63
text = "test"

[node name="chosen_spell_desc" type="Label" parent="combatUI/combat"]
offset_left = 423.0
offset_top = 790.0
offset_right = 771.0
offset_bottom = 882.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "test"
label_settings = ExtResource("5_be3fw")
autowrap_mode = 2

[node name="chosen_spell_dmg" type="Label" parent="combatUI/combat"]
offset_left = 427.0
offset_top = 1008.0
offset_right = 527.0
offset_bottom = 1100.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "test"
label_settings = ExtResource("5_be3fw")

[node name="cast" type="Button" parent="combatUI/combat"]
offset_left = 116.0
offset_top = 713.0
offset_right = 385.0
offset_bottom = 802.0
focus_neighbor_right = NodePath("../../spellSelect/Control/GridContainer/Fireball")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("6_p1cl7")
theme_override_font_sizes/font_size = 72
theme_override_styles/hover = SubResource("StyleBoxLine_qtvrs")
theme_override_styles/focus = SubResource("StyleBoxEmpty_i85tx")
text = "Cast!
"
flat = true
icon_alignment = 1
expand_icon = true

[node name="spell" type="Button" parent="combatUI/combat"]
offset_left = -122.359
offset_top = 808.731
offset_right = -114.359
offset_bottom = 816.731

[node name="enemyHealth" type="ProgressBar" parent="combatUI"]
layout_mode = 0
offset_left = 1348.0
offset_top = 75.0
offset_right = 1828.0
offset_bottom = 129.0
theme = ExtResource("4_2r65i")

[node name="Label" type="Label" parent="combatUI/enemyHealth"]
layout_mode = 0
offset_left = 7.0
offset_top = -62.0
offset_right = 116.0
offset_bottom = 25.0
theme_override_fonts/font = ExtResource("6_p1cl7")
theme_override_font_sizes/font_size = 76
text = "HP"

[node name="status_effect" type="Label" parent="combatUI/enemyHealth"]
layout_mode = 0
offset_left = 3.0
offset_top = 55.0
offset_right = 43.0
offset_bottom = 97.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("6_p1cl7")
theme_override_font_sizes/font_size = 45

[node name="playerHealth" type="ProgressBar" parent="combatUI"]
light_mask = 0
layout_mode = 0
offset_left = 52.0
offset_top = 575.0
offset_right = 532.0
offset_bottom = 629.0
theme = ExtResource("4_2r65i")
theme_override_fonts/font = ExtResource("6_p1cl7")
theme_override_font_sizes/font_size = 48

[node name="current_health" type="Label" parent="combatUI/playerHealth"]
layout_mode = 0
offset_left = 1.0
offset_top = -66.0
offset_right = 124.0
offset_bottom = -1.0
theme_override_fonts/font = ExtResource("6_p1cl7")
theme_override_font_sizes/font_size = 76
text = "HP"

[node name="spellSelect" type="Node2D" parent="combatUI"]

[node name="Control" type="Control" parent="combatUI/spellSelect"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="GridContainer" type="GridContainer" parent="combatUI/spellSelect/Control"]
visible = false
layout_mode = 0
offset_left = 99.0
offset_top = 793.0
offset_right = 903.0
offset_bottom = 1086.0
theme_override_constants/h_separation = 29
theme_override_constants/v_separation = 29
columns = 4

[node name="Fireball" parent="combatUI/spellSelect/Control/GridContainer" instance=ExtResource("8_16ejo")]
layout_mode = 2
spell_icon = "fireball"
metadata/_edit_use_anchors_ = true

[node name="Curse" parent="combatUI/spellSelect/Control/GridContainer" instance=ExtResource("8_16ejo")]
layout_mode = 2
spell_icon = "Curse"
metadata/_edit_use_anchors_ = true

[node name="Poison Swamp" parent="combatUI/spellSelect/Control/GridContainer" instance=ExtResource("8_16ejo")]
layout_mode = 2
spell_icon = "Poison Swamp"
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="combatUI/spellSelect/Control"]
layout_mode = 2
offset_left = 104.0
offset_top = 789.0
offset_right = 488.0
offset_bottom = 1039.0
theme_override_constants/separation = 29

[node name="Invoke" type="HBoxContainer" parent="combatUI/spellSelect/Control/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 29

[node name="Fireball" parent="combatUI/spellSelect/Control/VBoxContainer/Invoke" instance=ExtResource("8_16ejo")]
layout_mode = 2
spell_icon = "fireball"
metadata/_edit_use_anchors_ = true

[node name="Curse" parent="combatUI/spellSelect/Control/VBoxContainer/Invoke" instance=ExtResource("8_16ejo")]
layout_mode = 2
spell_icon = "Curse"
metadata/_edit_use_anchors_ = true

[node name="Poison Swamp" parent="combatUI/spellSelect/Control/VBoxContainer/Invoke" instance=ExtResource("8_16ejo")]
layout_mode = 2
spell_icon = "Poison Swamp"
metadata/_edit_use_anchors_ = true

[node name="Void" type="HBoxContainer" parent="combatUI/spellSelect/Control/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 29

[node name="Hollowed Threats" parent="combatUI/spellSelect/Control/VBoxContainer/Void" instance=ExtResource("8_16ejo")]
layout_mode = 2
spell_icon = "Hollowed Threats"
metadata/_edit_use_anchors_ = true

[node name="Void Sight" parent="combatUI/spellSelect/Control/VBoxContainer/Void" instance=ExtResource("8_16ejo")]
layout_mode = 2
spell_icon = "Void Sight"
metadata/_edit_use_anchors_ = true

[node name="Vapid Affliction" parent="combatUI/spellSelect/Control/VBoxContainer/Void" instance=ExtResource("8_16ejo")]
layout_mode = 2
spell_icon = "Vapid Affliction"
metadata/_edit_use_anchors_ = true

[node name="Blood" type="HBoxContainer" parent="combatUI/spellSelect/Control/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 29

[node name="Sanguinated Shell" parent="combatUI/spellSelect/Control/VBoxContainer/Blood" instance=ExtResource("8_16ejo")]
layout_mode = 2
spell_icon = "Sanguinated Shell"
metadata/_edit_use_anchors_ = true

[node name="Blood Clot Homunculus" parent="combatUI/spellSelect/Control/VBoxContainer/Blood" instance=ExtResource("8_16ejo")]
layout_mode = 2
spell_icon = "Blood Clot Homunculus"
metadata/_edit_use_anchors_ = true

[node name="Blood Moon" parent="combatUI/spellSelect/Control/VBoxContainer/Blood" instance=ExtResource("8_16ejo")]
layout_mode = 2
spell_icon = "Blood Moon"
metadata/_edit_use_anchors_ = true

[node name="EnemyName" type="Label" parent="combatUI"]
layout_mode = 0
offset_left = 1002.0
offset_top = 81.0
offset_right = 1314.0
offset_bottom = 151.0
theme_override_fonts/font = ExtResource("6_p1cl7")
theme_override_font_sizes/font_size = 60
text = "Executioner"
horizontal_alignment = 2

[node name="enemyCombat" parent="." instance=ExtResource("3_6j6h7")]
position = Vector2(1551, 227)
scale = Vector2(7, 7)

[node name="inventory_ui" parent="." instance=ExtResource("7_6qudd")]
z_index = 1
offset_left = 1335.0
offset_top = 723.0
offset_right = 1589.0
offset_bottom = 856.0
scale = Vector2(2, 2)

[node name="Label2" type="Label" parent="inventory_ui"]
layout_mode = 0
offset_left = 154.0
offset_top = 18.0
offset_right = 288.0
offset_bottom = 102.0
theme_override_fonts/font = ExtResource("6_p1cl7")
theme_override_font_sizes/font_size = 19
text = "E: Drop Item
Q: Use Item"
label_settings = ExtResource("12_jwlj2")

[node name="turn_sign" type="Label" parent="."]
offset_left = 48.0
offset_top = 42.0
offset_right = 294.0
offset_bottom = 134.0
text = "Your Turn"
label_settings = ExtResource("12_vu285")

[node name="cast_lefts" type="Label" parent="."]
z_index = 1
offset_left = 51.0
offset_top = 476.0
offset_right = 319.0
offset_bottom = 567.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("6_p1cl7")
theme_override_font_sizes/font_size = 40
text = "Casts Left:"

[node name="instruct" type="Label" parent="."]
offset_left = 537.0
offset_top = 486.0
offset_right = 1270.0
offset_bottom = 570.0
theme_override_font_sizes/font_size = 9
text = "Select a spell and then click cast!"
label_settings = ExtResource("12_vu285")

[node name="spell effect" type="AnimatedSprite2D" parent="."]
light_mask = 0
z_index = 2
position = Vector2(693.913, 456.094)
scale = Vector2(5.18579, 5.41277)
sprite_frames = ExtResource("14_cb2l5")
animation = &"Poison Swamp"
frame_progress = 0.155468

[node name="defend" type="AnimatedSprite2D" parent="."]
visible = false
light_mask = 0
position = Vector2(519, 470)
scale = Vector2(19.345, 21.9891)
sprite_frames = ExtResource("14_cb2l5")
animation = &"Sanguinated Shell"
frame_progress = 0.465408

[node name="enemy attack" type="AnimatedSprite2D" parent="."]
z_index = -1
position = Vector2(1421, 366)
scale = Vector2(4.5, 4.5)
sprite_frames = ExtResource("14_cb2l5")
animation = &"Curse"
frame_progress = 0.832722
flip_h = true

[node name="DoT effect" type="AnimatedSprite2D" parent="."]
z_index = 1
position = Vector2(1562, 533)
scale = Vector2(8.91666, 8.91666)
sprite_frames = ExtResource("14_w4egx")
animation = &"poisoned"
frame_progress = 0.431583

[node name="spellEffects" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6s30w")
}

[node name="field" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(893, 99)
scale = Vector2(6.55878, 6.55878)
sprite_frames = SubResource("SpriteFrames_mg0qq")
animation = &"Blood Moon"

[node name="ColorRect" type="ColorRect" parent="field"]
offset_left = -497.0
offset_top = -15.0
offset_right = 546.0
offset_bottom = 262.0
mouse_filter = 2
color = Color(1, 0.0901961, 0.0901961, 0.215686)

[node name="Pet" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(299, 322)
scale = Vector2(9.10902, 9.10902)
sprite_frames = ExtResource("14_cb2l5")
animation = &"Blood Clot Homunculus"
frame_progress = 0.322273
script = ExtResource("18_dsuyw")

[connection signal="pressed" from="combatUI/Inventory" to="." method="_on_inventory_pressed"]
[connection signal="pressed" from="combatUI/return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="combatUI/combat/cast" to="." method="_on_onepunch_pressed"]
[connection signal="pressed" from="combatUI/combat/spell" to="." method="_on_spell_pressed"]
[connection signal="dead" from="enemyCombat" to="." method="_on_enemy_combat_dead"]
[connection signal="item_used" from="inventory_ui" to="." method="_on_inventory_ui_item_used"]
